k8s/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
      - image: redis
        name: redis
        volumeMounts:
        - name: "redis-dir"
          mountPath: "/var/lib/data"
          readOnly: false
        resources:
          limits:
            cpu: 200m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
      volumes:
      - name: "redis-dir"
        persistentVolumeClaim:
          claimName: "persistent-volume-claim"
